Fixed Klaviyo Form  Design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,7 @@ html {
         transform: translateY(0);
     }
 }
+
+.klaviyo-form-XGdvPD .needsclick.kl-private-reset-css-Xuajs1 form {
+    overflow: hidden !important;
+}
