--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ body {
     box-shadow: 0px 15px 47px 0px #0ad3ff80 !important;
   }
   .container {
-    @apply mx-auto;
+    @apply mx-auto px-5 2xl:max-w-[1450px];
   }
   .landing_page_container {
     @apply mx-auto max-w-full px-5 md:px-6 xl:max-w-[1280px];
