--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ html {
 
 body {
   @apply bg-[#F4F8FF] dark:bg-[#030c16] opacity-0 pointer-events-none;
+  overflow-y: overlay;
 }
 
 @tailwind base;
@@ -168,4 +169,14 @@ body {
 
 canvas {
   display: block;
+}
+
+.vimeo_wrapper iframe {
+  width: 100vw !important;
+  height: 100% !important;
+}
+
+.vimeo_wrapper #player {
+  width: 100% !important;
+  height: 100% !important;
 }
