design and connected register modal for each section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,9 @@ body {
   .__input {
     @apply input_border focus:input_gradient_border border border-transparent w-full block outline-none py-4 px-6 rounded-[10px] text-base lg:text-lg placeholder:text-[#576993] placeholder:capitalize text-white;
   }
+  .__label {
+    @apply text-base lg:text-xl font-medium font-sans text-[#9EBBFF] mb-3 capitalize;
+  }
 }
 
 @layer utilities {
