--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,12 @@ body {
   .__label {
     @apply text-base lg:text-xl font-medium font-sans text-[#9EBBFF] mb-3 capitalize;
   }
+  .body_text {
+    @apply text-base lg:text-lg !leading-[160%] text-[#838CA3] capitalize;
+  }
+  .title_text {
+    @apply text-[32px] leading-[40px] lg:text-[64px] lg:leading-[120%] text-white text-center font-spaced;
+  }
 }
 
 @layer utilities {
@@ -35,7 +41,7 @@ body {
     @apply mx-auto px-5 2xl:max-w-[1450px];
   }
   .landing_page_container {
-    @apply mx-auto max-w-full px-5 md:px-6 xl:max-w-[1380px];
+    @apply mx-auto max-w-full px-[30px] md:px-6 xl:max-w-[1380px];
   }
   .bg-size-full {
     background-size: 100%;
@@ -50,8 +56,11 @@ body {
   .btn_gradient {
     @apply from-blue-500 to-cyan-500 bg-gradient-to-r text-sm sm:text-base px-10 py-2.5 rounded-full hover:from-blue-600 hover:to-cyan-600;
   }
-  .bg-120 {
+  .bg-size-120 {
     background-size: 120%;
+  }
+  .bg-size-300 {
+    background-size: 300%;
   }
 
   .roadmap_circle_bg {
