design white glove modal

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,6 @@
   font-family: "Spaced";
   src: url("../public/fonts/Spaced_OTF.otf");
 }
-@font-face {
-  font-family: "Hypers-Techno";
-  src: url("../public/fonts/Hypers_Techno.ttf");
-}
 
 html {
   scroll-behavior: smooth;
@@ -32,7 +28,7 @@ body {
     @apply text-base lg:text-[18px] !leading-[160%] text-[#838CA3] capitalize;
   }
   .title_text {
-    @apply text-[32px] leading-[40px] lg:text-[64px] ipad:text-[40px] ipad:leading-[120%] text-white text-center font-hypers-techno;
+    @apply text-[32px] leading-[40px] lg:text-[64px] ipad:text-[40px] ipad:leading-[120%] text-white text-center font-spaced;
   }
   .form_grid_2 {
     @apply grid grid-cols-1 lg:grid-cols-2 gap-6;
@@ -260,4 +256,32 @@ canvas {
 }
 .custom_date_input_wrapper .MuiInputAdornment-root {
   @apply absolute top-1/2 -translate-y-1/2 right-6;
+}
+
+.scrollbar_thin::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scrollbar_thin::-webkit-scrollbar-track {
+  background: #262d47;
+  border-radius: 100px;
+  margin-block: 10px;
+  margin-right: 10px;
+}
+
+.scrollbar_thin::-webkit-scrollbar-thumb {
+  background-color: #576993;
+  border-radius: 100px;
+}
+
+.white_glove_card_gradient_border {
+  background: linear-gradient(#1c233d, #1c233d) padding-box padding-box,
+    linear-gradient(91.52deg, #6396f9 40.77%, #00d1ff 115.11%) border-box
+      border-box;
+}
+
+.white_glove_card_solid_border {
+  background: linear-gradient(#1c233d, #1c233d) padding-box padding-box,
+    linear-gradient(91.52deg, #1c233d 40.77%, #1c233d 115.11%) border-box
+      border-box;
 }
